--- a/gb/21/10/4/n13281397.md
+++ b/gb/21/10/4/n13281397.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/tcdmcc359/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tcdmcc359/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tcdmcc359/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tcdmcc359/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tcdmcc359/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>中国佛教史上最大法难——中共毁灭佛教</h2>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>蔡大雅：中国佛教史上最大法难——中共毁灭佛教</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13281408-GettyImages-163287566-600x400.jpg" />
 <h6>在神州大地上，佛教曾经历四次法难，都没有中共毁灭佛教的那般邪恶彻底，佛教在中国已名存实亡。图为2013年3月，一名参加中共两会的僧人走出人民大会堂。（Lintao Zhang/Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2021年10月10日讯】中国历代以来，<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E4%BD%9B%E6%95%99.md#1">佛教</a>经历四次<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E6%B3%95%E9%9A%BE.md#1">法难</a>，但论范围论程度论手段论时间，都不及中共窃政后对佛教的迫害与毁灭。中共灭佛的手段变化多端且与时俱进，有时蛮横凶残，有时极具欺骗性。而其终极目标即是：消灭地球上所有的宗教，消灭人对神的信仰。</p>
-<h2><ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E4%B8%89%E6%AD%A6%E4%B8%80%E5%AE%97.md#1">三武一宗</a>v.s.中共：谁更具毁灭性？</h2>
-<p>在神州大地上，<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E4%BD%9B%E6%95%99.md#1">佛教</a>曾经历四次<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E6%B3%95%E9%9A%BE.md#1">法难</a>，都没有中共毁灭佛教的那般邪恶彻底。</p>
-<p>历史上的四次法难由三位谥号中有“武”和一位有“宗”的皇帝发起，所以也被称为“<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E4%B8%89%E6%AD%A6%E4%B8%80%E5%AE%97.md#1">三武一宗</a>”法难。这四位皇帝之所以打压佛教，主要是为了打仗需要资金与兵源，而当时的佛教都极为兴盛，寺产既丰僧人也多，皇帝要在军事上有所作为，没收庙产并强迫僧人还俗当兵，自是一举两得之计。北魏太武帝和唐武宗的灭佛也参杂了因为信奉道教而受人唆使的因素。</p>
+	<p>【大纪元2021年10月10日讯】中国历代以来，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BD%9B%E6%95%99.md#1">佛教</a>经历四次<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E9%9A%BE.md#1">法难</a>，但论范围论程度论手段论时间，都不及中共窃政后对佛教的迫害与毁灭。中共灭佛的手段变化多端且与时俱进，有时蛮横凶残，有时极具欺骗性。而其终极目标即是：消灭地球上所有的宗教，消灭人对神的信仰。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E6%AD%A6%E4%B8%80%E5%AE%97.md#1">三武一宗</a>v.s.中共：谁更具毁灭性？</h2>
+<p>在神州大地上，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%BD%9B%E6%95%99.md#1">佛教</a>曾经历四次<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E9%9A%BE.md#1">法难</a>，都没有中共毁灭佛教的那般邪恶彻底。</p>
+<p>历史上的四次法难由三位谥号中有“武”和一位有“宗”的皇帝发起，所以也被称为“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%89%E6%AD%A6%E4%B8%80%E5%AE%97.md#1">三武一宗</a>”法难。这四位皇帝之所以打压佛教，主要是为了打仗需要资金与兵源，而当时的佛教都极为兴盛，寺产既丰僧人也多，皇帝要在军事上有所作为，没收庙产并强迫僧人还俗当兵，自是一举两得之计。北魏太武帝和唐武宗的灭佛也参杂了因为信奉道教而受人唆使的因素。</p>
 <p>在这四次的劫难中，短的历时8个月，最长的也不超过6年。而中共自篡政以来，持续地铲除所有有形的宗教物事和无形的信仰意识，至今未停，论范围论程度论手段论时间，都可说得上是空前绝后，使佛教在中国名存实亡。</p>
 <p>中共灭佛的手段变化多端且与时俱进，有时蛮横凶残，有时极具欺骗性，只有了解中共的本质与其对宗教的真实意图，才能不被其看似矛盾的两面手法所迷惑。</p>
-<h2><ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>不变的宗教政策：最终消灭所有宗教</h2>
-<p>中共自称为无神论的政党，但从其《<ahref="https://github.com/tcdmcc359/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>宣言》中即明示，中共其实是一个信奉西来幽灵的邪教组织，自然仇视一切宗教信仰，必欲除之而后快。根据知情人士揭露，时任中共国家宗教事务管理局局长的叶小文曾在1999年8、9月间的一次内部讲话中提及中共的宗教政策，宣称比实现共产主义这个目标更重要、更艰巨的任务是，共产党最终要在地球上消灭所有的宗教，消灭人对神的信仰。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>不变的宗教政策：最终消灭所有宗教</h2>
+<p>中共自称为无神论的政党，但从其《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E5%85%9A.md#1">共产党</a>宣言》中即明示，中共其实是一个信奉西来幽灵的邪教组织，自然仇视一切宗教信仰，必欲除之而后快。根据知情人士揭露，时任中共国家宗教事务管理局局长的叶小文曾在1999年8、9月间的一次内部讲话中提及中共的宗教政策，宣称比实现共产主义这个目标更重要、更艰巨的任务是，共产党最终要在地球上消灭所有的宗教，消灭人对神的信仰。</p>
 <p>为了达到消灭佛教的目标，中共深知只靠着过去毁寺焚经、逼僧还俗的做法，尚无法完成任务，还需使上西来幽灵所传授的邪招。列宁曾说“堡垒最容易从内部攻破”，作为马列子孙的中共自然将之奉为圭臬，用来对付国民党、驱逐合法政权、占领中国大陆，一用即灵且屡试不爽。</p>
 <p>现在用这招来对付没有任何还手能力的佛教，其从内部瓦解将只是个时间问题。但如果以为中共把佛教灭掉就算完事了，这样也太低估中共的邪恶。保留佛教的表面形式，却毁灭其真正的内涵与精髓，而以中共的党文化代之，使现代佛教如同画皮一般，被中共穿上，用来迷惑世人。</p>
 <figure id="attachment_13281409" aria-describedby="caption-attachment-13281409" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13281409-GettyImages-163360364-e1633375841783.jpg"><img class="size-large wp-image-13281409" src="https://i.epochtimes.com/assets/uploads/2021/10/id13281409-GettyImages-163360364-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13281409" class="wp-caption-text">中共保留佛教的表面形式，却毁灭其真正的内涵与精髓，而以中共的党文化代之，使现代佛教如同画皮一般，被中共穿上，用来迷惑世人。图为2013年3月8日出席中共两会的和尚。（Feng Li/Getty Images）</figcaption></figure>
@@ -113,51 +113,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/19/n13244942.md#1">19日社区新增24例 总理说管理Delta存挑战</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/21/n13249136.md#1">21日社区新增14例 政府提高违规罚款额度</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/23/n13254414.md#1">23日社区新增15例 总理强调高接种率重要性</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/23/n13256232.md#1">政府“消除策略”解读 Delta疫情下还适用吗？</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/26/n13262349.md#1">纽总理联合国大会发言：“我们都紧密相连”</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/27/n13265008.md#1">总理重申政府疫情应对计划 回应前总理质疑</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/27/n13265075.md#1">法律专家：疫苗接种护照不太可能强制执行</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/28/n13265314.md#1">关于自我隔离试点计划 目前知道的都在这里</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/28/n13267513.md#1">政界人士督促纽政府隔离上效仿台湾做法</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/21/9/29/n13269832.md#1">反对党：应该让纽人圣诞前能自由出入新西兰</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/10/5/14/n2902099.md#1">【城市的瞬间】说来即来的过去——上海（1）</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/12/5/28/n3598860.md#1">【新纪元】中国热的失落与复苏</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/12/7/29/n3646513.md#1">【新纪元】中国舞复苏 寻回民族庄严命脉</a></li>
-<li><a href="https://github.com/tcdmcc359/djy/blob/master/gb/15/3/26/n4396660.md#1">路易十四 以艺术舞蹈开创欧洲文明</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/5/14/n2902099.md#1">【城市的瞬间】说来即来的过去——上海（1）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/5/28/n3598860.md#1">【新纪元】中国热的失落与复苏</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/12/7/29/n3646513.md#1">【新纪元】中国舞复苏 寻回民族庄严命脉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/3/26/n4396660.md#1">路易十四 以艺术舞蹈开创欧洲文明</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/1/n10107668.md#1" target="_blank">林辉：导演陈凯歌对父亲终生的愧疚</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/28/n11415000.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（上）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11243655.md#1" target="_blank">如何带好问题生 真善忍解难题</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13275161.md#1">【百年真相】耀眼明星的陨落 上官云珠坠楼真相</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13289075.md#1">【百年真相】 骇世惊俗的告白 瞿秋白《多余的话》</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/9/30/n13272470.md#1">璎珞：自佛国而来，尘世间最美的项链</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13275150.md#1">【未解之谜】轮回记忆揭秘 考古界未解难题</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/4/n13281280.md#1">无神论统御的基督教王国</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/9/n13291946.md#1">车评：双马达混能 2021 Toyota RAV4 Hybrid Limited</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291720.md#1">【远见快评】长津湖掀文字狱 中共两大谎言</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13290981.md#1">【新闻大家谈】美军驻台超1年 防中共危险诈术</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13286747.md#1">【独家】十一急电泄中共准备处置突发疫情</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287990.md#1">【中国观察】北京是否将要重返毛时代</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13288961.md#1">与杨洁篪会谈六小时后 沙利文首发声</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/6/n13286296.md#1">为何愿意前夫带儿子？赵丽颖录节目尴尬回应</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13289044.md#1">被封杀42天动向成谜 赵薇现踪林心如IG</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291772.md#1">罹患直肠癌挺过51次化疗 余苑绮近照曝光</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291507.md#1">范冰冰站C位看时装秀 获设计师好友发文感谢</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13291633.md#1">朱孝天怀疑与妻都曾染疫 自曝两年来收入微薄</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13289897.md#1">消防队员援救峭壁上的“女人” 结局很意外</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/1/n13274124.md#1">90%以上的病自己会好？提升自愈力有1个关键</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/8/n13290207.md#1">在内蒙古草原点外送要等4小时 跑腿费用惊人</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/6/n13285230.md#1">音乐教授到公园练萨克斯 一松鼠成“忠粉”</a></li>
-<li><a href="https://github.com/bggrdk323/djy/blob/master/gb/21/10/7/n13287053.md#1">致癌、有毒或无效 哪些干洗手液上了“黑名单”？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tcdmcc359/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tcdmcc359/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/4/n13281397.htm">中国佛教史上最大法难——中共毁灭佛教</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/4/n13281397.htm">蔡大雅：中国佛教史上最大法难——中共毁灭佛教</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/tcdmcc359/djy/blob/master/gb/21/10/4/n13281397.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tcdmcc359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tcdmcc359/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tcdmcc359/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tcdmcc359/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tcdmcc359/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13281397.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
